--- a/sobre.html
+++ b/sobre.html
@@ -57,6 +57,9 @@
   </div>
 </section>
 
+<a href="https://wa.me/+5577988480076" class="whatsapp-float" target="_blank" title="Fale comigo no WhatsApp">
+  <img src="img/whatsapp-svgrepo-com.svg" alt="WhatsApp">
+</a>
 
  <footer>
   <div class="footer-content">
