--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gabriel Ricardo - Corretor de Imóveis</title>
+  <meta name="google-site-verification" content="-qPYPNMxSOaiILNlJgH1E7lE4ocoJyV49_YU-RBkhDQ" />
   <meta name="description" content="Gabriel Ricardo é corretor de imóveis especializado em casas, apartamentos e imóveis comerciais. Atendimento personalizado para você encontrar o imóvel ideal." />
   <meta name="keywords" content="corretor de imóveis, imóveis à venda, casas, apartamentos, terrenos, salas comerciais, aluguel, compra de imóveis, Gabriel Ricardo" />
   <meta name="author" content="Gabriel Ricardo" />
