Atualização das categorias

--- a/index.html
+++ b/index.html
@@ -64,15 +64,19 @@
     <button type="button" class="toggle-btn active" data-type="venda">Venda</button>
     <button type="button" class="toggle-btn" data-type="locacao">Locação</button>
   </div>
-  <div class="form-fields">
-    <select id="tipoSelect">
-      <option>Tipo do imóvel</option>
-    </select>
-    <select id="bairroSelect">
-      <option>Bairro</option>
-    </select>
-    <button type="submit" class="btn-search">Buscar</button>
-  </div>
+<div class="form-fields">
+  <select id="tipoSelect">
+    <option>Tipo do imóvel</option>
+  </select>
+  <select id="bairroSelect">
+    <option>Bairro</option>
+  </select>
+  <button type="submit" class="btn-search">Buscar</button>
+
+  <button type="button" id="remove-filter-btn" class="btn-remove">
+    <i class="fa-solid fa-broom"></i> Limpar
+  </button>
+</div>
 </form>
     </div>
     </div>
