--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 
   gtag('config', 'G-R83QVZ2BCP');
 </script>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8550758981967142"
+     crossorigin="anonymous"></script>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Gabriel Ricardo - Corretor de Imóveis</title>
-  <meta name="google-site-verification" content="-qPYPNMxSOaiILNlJgH1E7lE4ocoJyV49_YU-RBkhDQ" />
   <meta name="google-adsense-account" content="ca-pub-7320098697529570">
   <meta name="description" content="Gabriel Ricardo é corretor de imóveis especializado em casas, apartamentos e imóveis comerciais. Atendimento personalizado para você encontrar o imóvel ideal." />
   <meta name="keywords" content="corretor de imóveis, imóveis à venda, casas, apartamentos, terrenos, salas comerciais, aluguel, compra de imóveis, Gabriel Ricardo" />
